--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
           </div>
 
           <div class="btn--row">
-            <button id="image-1" class="btn btn--raised" data-src="./assets/example/cat1.png">Image 1</button>
-            <button id="image-2" class="btn btn--raised" data-src="./assets/example/cat2.jpg">Image 2</button>
-            <button id="image-3" class="btn btn--raised" data-src="./assets/example/cat3.png">Image 3</button>
+            <button id="image-1" class="btn btn--raised" data-src="./public/example/cat1.png">Image 1</button>
+            <button id="image-2" class="btn btn--raised" data-src="./public/example/cat2.jpg">Image 2</button>
+            <button id="image-3" class="btn btn--raised" data-src="./public/example/cat3.png">Image 3</button>
           </div>
 
           <form id="customization-form" class="customization-form">
