--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
           </div>
 
           <div id="img-container" class="img-container">
-            <img id="avatar" src="/avatar-designer/assets/cat1.png" class="avatar" alt="example" width="200"
-              height="200" />
+            <img id="avatar" src="/avatar-designer/cat1.png" class="avatar" alt="example" width="200" height="200" />
           </div>
 
           <div class="btn--row">
-            <button id="image-1" class="btn btn--raised" data-src="/avatar-designer/assets/cat1.png">Image 1</button>
-            <button id="image-2" class="btn btn--raised" data-src="/avatar-designer/assets/cat2.jpg">Image 2</button>
-            <button id="image-3" class="btn btn--raised" data-src="/avatar-designer/assets/cat3.png">Image 3</button>
+            <button id="image-1" class="btn btn--raised" data-src="/avatar-designer/cat1.png">Image 1</button>
+            <button id="image-2" class="btn btn--raised" data-src="/avatar-designer/cat2.jpg">Image 2</button>
+            <button id="image-3" class="btn btn--raised" data-src="/avatar-designer/cat3.png">Image 3</button>
           </div>
 
           <form id="customization-form" class="customization-form">
